// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabGroup renders correctly 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-3 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0"
  >
    <div
      class=" emotion-1 emotion-2"
      role="tablist"
    />
    <div
      class="emotion-3 emotion-4"
      style="width: 0px; left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-selected='true'] {
  color: #4f0599;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3[aria-disabled='true']:hover,
.emotion-3[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-9 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0"
  >
    <div
      class=" emotion-1 emotion-2"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="true"
        aria-selected="true"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="emotion-9 emotion-10"
      style="width: 0px; left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-selected='true'] {
  color: #4f0599;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3[aria-disabled='true']:hover,
.emotion-3[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-9 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0"
  >
    <div
      class=" emotion-1 emotion-2"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-label="first"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-label="second"
        aria-selected="true"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="true"
        aria-label="three"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="emotion-9 emotion-10"
      style="width: 0px; left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-selected='true'] {
  color: #4f0599;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3[aria-disabled='true']:hover,
.emotion-3[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-9 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0"
  >
    <div
      class=" emotion-1 emotion-2"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-selected="true"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="emotion-9 emotion-10"
      style="width: 0px; left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-selected='true'] {
  color: #4f0599;
}

.emotion-3[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3[aria-disabled='true']:hover,
.emotion-3[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.emotion-8:hover,
.emotion-8:active,
.emotion-8:focus {
  color: #4f0599;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-selected='true'] {
  color: #4f0599;
}

.emotion-8[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-8[aria-disabled='true']:hover,
.emotion-8[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.emotion-9 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0"
  >
    <div
      class=" emotion-1 emotion-2"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        First
      </div>
      <a
        aria-disabled="false"
        aria-selected="false"
        class="emotion-3 emotion-4"
        role="tab"
        tabindex="0"
      >
        Second
      </a>
      <div
        aria-disabled="true"
        aria-selected="false"
        class="emotion-4 emotion-8"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </div>
    </div>
    <div
      class="emotion-9 emotion-10"
      style="left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with variant default 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.emotion-3 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="emotion-0"
    variant="default"
  >
    <div
      class=" emotion-1 emotion-2"
      role="tablist"
    />
    <div
      class="emotion-3 emotion-4"
      style="width: 0px; left: 0px;"
    />
  </div>
</DocumentFragment>
`;
